--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel= "stylesheet" href="style.css">
+
   </head>
   <body>
-    <h1> hello kids</h1>
+    <nav>
+    
+    <div class ="nav">
+      <div>  <h1 class ="pretty eb"> Eb</h1></div>
+      <div> <h2 class =" navSLUpIn"> Login</h2></div>
+      <div> <h2 class =" navSLUpIn">  sign up</h2></div>
+    </div>
+  </nav>
+  <hr>
+   
   </body>
   </html>
