--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class ="nav">
       <div>  <h1 class ="pretty eb"> Eb</h1></div>
       <div> <h2 class =" navSLUpIn"> Login</h2></div>
-      <div> <h2 class =" navSLUpIn">  sign up</h2></div>
+      <div> <h2 class =" navSLUpIn"> Sign Up</h2></div>
     </div>
   </nav>
   <hr>
