--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel= "stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
 
   </head>
   <body>
+    <!--nav section-->
     <nav>
-    
     <div class ="nav">
-      <div>  <h1 class ="pretty eb"> Eb</h1></div>
+      <div>  <h1 class ="pretty eb"> Education babies</h1></div>
       <div class ="spacer"></div>
-      <div> <h2 class =" navSLUpIn"> Login</h2></div>
-      <div> <h2 class =" navSLUpIn">  sign up</h2></div>
+      <div> <h2 class =" navSLUpIn">Login</h2></div>
+      <div> <h2 class =" navSLUpIn">sign up</h2></div>
     </div>
   </nav>
-  <hr>
-   
+<!--main content-->
+   <h1 class ="title"> Education <br> babies</h1>
+   <img class="firstImage" src="assets/markus-spiske-OO89_95aUC0-unsplash.jpg"
+   alt="smart baby">
   </body>
   </html>
