--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel= "stylesheet" href="style.css">
+    <link href="https://fonts.ggoogleapis.com/css2?family=Material+sSymbols+Outlined" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
     <!--nav section-->
@@ -17,12 +21,19 @@
       <div>  <h1 class ="pretty eb"> Education babies</h1></div>
       <div class ="spacer"></div>
       <div> <h2 class =" navSLUpIn">Login</h2></div>
-      <div> <h2 class =" navSLUpIn">sign up</h2></div>
+      <div> <h2 class =" navSLUpIn">Sign Up</h2></div>
+     <i class="material-icons iconLines">density menu</i></div>
     </div>
   </nav>
 <!--main content-->
    <h1 class ="title"> Education <br> babies</h1>
-   <img class="firstImage" src="assets/markus-spiske-OO89_95aUC0-unsplash.jpg"
+   <img class="firstImage imgBorder" src="assets/markus-spiske-OO89_95aUC0-unsplash.jpg"
    alt="smart baby">
+   <p class="firstLine"> Keep the learning going outside of the classroom</p>
+   <i class="material-icons">sync </i>
+   <i class="material-icons"></i>
+   <i class="material-icons">import contcts library books</i>
+   <i class="material-icons">
+chart</i>
   </body>
   </html>
